finance/web/ms_suggestion/src/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-suggestion-app-service
  namespace: web-app
spec:
  selector:
    app: ms-suggestion
  ports:
    - protocol: TCP
      port: 81
      targetPort: 5001
  type: LoadBalancer
