finance/web/ms_suggestion/src/deployment/k8s/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ms-info
  namespace: web-app
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: ["/ms_info"]
